# NextjsFastapiTextEditor

./: .gitignore  Dockerfile  Plan.md  README.md  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: backend-ci.yml  docker-ghcr.yml  frontend-ci.yml
docs/: GITHUB_PUBLISH.md  RAILWAY_DEPLOY.md
web-editor-backend/: Dockerfile  README.md  pyproject.toml
web-editor-backend/app/: main.py
web-editor-backend/app/services/: convert_service.py
web-editor-backend/app/services/converters/: docx_converter.py  hwp_converter.py  hwpx_converter.py  pdf_converter.py
web-editor-backend/scripts/: smoke_convert.py
web-editor-backend/tests/: test_convert_rejects_unknown_ext.py  test_health.py
web-editor-backend/web_editor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web-editor-frontend/: Dockerfile  README.md  package-lock.json  package.json
web-editor-frontend/src/app/: layout.tsx  page.tsx
web-editor-frontend/src/components/: AppProviders.tsx  RichTextEditor.tsx  ThemeModeToggle.tsx  UploadConvert.tsx
web-editor-frontend/src/lib/: api.ts  sanitizeHtml.ts  themeModeStorage.ts  useAppTheme.ts
